--- a/contacts.css
+++ b/contacts.css
@@ -1088,10 +1088,10 @@ margin-top: 50px;
 }
 
 .select {
-    width: 75%;
+    width: 78%;
     height: 64px;
     background-color: #EBF0E4;
-    margin-left: 12.5%;
+    margin-left: 13.5%;
     color: black;
     border: 1.5px solid #233000;
     color: #233000;
@@ -1102,10 +1102,10 @@ margin-top: 50px;
     font-size: 16px;
 }
 .selected{
-    width: 75%;
+    width: 78%;
     height: 60px;
     background-color: #EBF0E4;
-    margin-left: 12.5%;
+    margin-left: 13.5%;
     color: black;
     border: 1.5px solid #233000;
     color: #233000;
@@ -1140,7 +1140,7 @@ input::placeholder{
 
 footer {
     width: 100%;
-    height: 850px;
+    height: 950px;
     background-color: #233000;
     color: #FFFFFF;
     display: flex;
@@ -1154,7 +1154,7 @@ footer {
     width: 300px;
     position: absolute;
     right: 100px;
-    margin-top: 435px;
+    margin-top: 370px;
 }
 
 .input-footer {
@@ -1195,7 +1195,7 @@ footer {
 
 .footer-line {
     height: 2px;
-    margin-top: -40px;
+    margin-top: -140px;
 }
 
 .contact {
@@ -1232,7 +1232,7 @@ footer {
 
 .footer-h4 {
     margin-left: 10px;
-    margin-top: -280px;
+    margin-top: -360px;
     height: 40px;
 }
 
@@ -1241,7 +1241,7 @@ footer {
     font-size: 20px;
     font-weight: normal;
     margin-left: 30px;
-    margin-top: -50px;
+    margin-top: -190px;
 
 }
 
@@ -1397,7 +1397,10 @@ overflow: hidden;
 
 .reserv{
 position: absolute;
-left: 90px;
+left: 60px;
+top: 300px;
+width: 300px;
+/* background-color: lawngreen; */
 
 
 }
