--- a/menu.css
+++ b/menu.css
@@ -733,7 +733,7 @@ body {
     width: 100%;
     max-width: 100%;
     overflow-x: hidden;
-    border: 2px solid slateblue;
+    /* border: 2px solid slateblue; */
 }
 
 
@@ -908,7 +908,7 @@ body {
 .section-4 {
     height: 1900px;
     width: 100%;
-    margin-top: 500px;
+    margin-top: 200px;
     background-image: url(menu.img/Avocado4back.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -980,8 +980,8 @@ body {
     color: black;
     border: 1.5px solid #233000;
     color: #233000;
-    padding-left: 20px;
-    padding-right: 200px;
+    padding-left: 0px;
+    padding-right: 0;
     font-family: 'Inter';
     font-size: 14px;
     border-radius: 10px;
@@ -1017,121 +1017,9 @@ option {
 
 
 
-/* footer {
-    width: 100%;
-    height: 550px;
-    background-color: #233000;
-    color: #FFFFFF;
-    display: flex;
-    flex-wrap: wrap;
-}
 
 
-.form {
-    height: 100px;
-    width: 500px;
-    position: absolute;
-    right: 100px;
-    margin-top: 235px;
-}
 
-.input-footer {
-    width: 300px;
-    height: 50px;
-    background-color: #233000;
-    border: 1px solid #FFFFFF;
-    color: #FFFFFF;
-    font-family: 'Inter';
-    font-size: 17px;
-}
-
-::placeholder {
-    color: #FFFFFF;
-    padding-left: 30px;
-}
-
-.form-p {
-    font-family: 'Inter';
-    font-size: 14px;
-}
-
-.submit {
-    background-color: #5E6600;
-    width: 150px;
-    height: 54px;
-    border: none;
-    color: #FFFFFF;
-    font-family: 'Rufina';
-    font-size: 22px;
-    margin-left: 28px;
-}
-
-.footer-line {
-    height: 2px;
-    margin-top: 40px;
-}
-
-.contact {
-    width: 220px;
-    position: relative;
-    left: 100px;
-    height: 250px;
-    margin-top: 95px;
-    font-size: 14px;
-    font-family: 'Inter';
-    font-weight: normal;
-}
-
-.contact-h3 {
-    font-family: 'Rufina';
-    font-size: 32px;
-    margin-bottom: 60px;
-}
-
-.contact-p {
-    margin-top: 30px;
-}
-
-.footer-h2 {
-    font-family: 'Rufina';
-    font-size: 60px;
-    color: #FFFFFF;
-    width: 200px;
-    height: 150px;
-    margin-top: 150px;
-    margin-left: 130px;
-}
-
-.footer-h4 {
-    margin-left: 200px;
-    margin-top: 130px;
-    height: 40px;
-}
-
-.under {
-    font-family: 'Inter';
-    font-size: 20px;
-    font-weight: normal;
-    margin-left: 138px;
-
-}
-
-.under-img {
-    position: absolute;
-    right: 162px;
-    margin-top: -45px;
-}
-
-
-.book-now:hover {
-    opacity: 0.8;
-    transition-duration: 0.6s;
-}
-
-.select:hover {
-    opacity: 0.8;
-    transition-duration: 0.6s;
-} */
 
 footer {
     width: 414px;
@@ -1315,85 +1203,102 @@ a{
     text-decoration: none;
     color: #FFFFFF;
 }
-                                        
-                                        .newMenu{
-                                            /* background-color: #334601; */
-                                            z-index: 9;
-                                            width: 100%;
-                                            height: 950px;
-                                            margin-top: -170px;
-                                            position: absolute;
-                                            color: #FFFFFF;
-                                            font-size: 60px;
-                                            font-family: 'Rufina';
-                                            display: none;
-                                            background-image: url(jsmenuimg.png);
-                                            
-                                        }
-                                        .newimg{
-                                        
-height: 950px;
+           
+
+
+
+ .newMenu{
+    z-index: 9;
+    width: 414px;
+    height: 1480px;
+    position: absolute;
+    top: 0;
+    color: #FFFFFF;
+    font-size: 60px;
+    font-family: 'Rufina';
+    display: none;
+    background-image: url(jsmenuimg.png);
+    background-size: cover;
+    overflow: hidden;
+    
+}
+.newimg{
+
+height: 2080px;
+margin-top: 170px;
 
 
 }
 
+a{
+color: #FFFFFF;
+text-decoration: none;
+}
 .span-menu1{
-margin-left: 190px;
-margin-top: 200px;
+margin-left: 90px;
+/* margin-top: 300px; */
 position: absolute;
-top: -170px;
+top: 0px;
 z-index: 11;
 padding-top: 90px;
 }
 .span-menu2{
-margin-left: 190px;
-margin-top: 350px;
+margin-left: 90px;
+/* margin-top: 450px; */
 position: absolute;
-top: -170px;
+top: 40px;
 z-index: 11;
 padding-top: 90px;
 color: rgba(255, 255, 0, 0.63);
 }
 .span-menu3{
-margin-left: 190px;
-margin-top: 500px;
+margin-left: 90px;
+/* margin-top: 600px; */
 position: absolute;
-top: -170px;
+top: 80px;
+z-index: 11;
+color: #FFFFFF;
+
+padding-top: 90px;
+}
+
+.span-menu4{
+margin-left: 90px;
+color: #FFFFFF;
+/* margin-top: 750px; */
+position: absolute;
+top: 120px;
 z-index: 11;
 padding-top: 90px;
 }
-.span-menu4{
-margin-left: 190px;
-margin-top: 650px;
+
+.span-menu5{
+margin-left: 90px;
+/* margin-top: 900px; */
+color: #FFFFFF;
 position: absolute;
-top: -170px;
-z-index: 11;
-padding-top: 90px;
-}.span-menu5{
-margin-left: 190px;
-margin-top: 800px;
-position: absolute;
-top: -170px;
+top: 160px;
 z-index: 11;
 padding-top: 90px;
 }
 
 
 .contact-2{
-position: relative;
-top: -700px;
-left:900px;
+position: absolute;
+top: 1150px;
+left:23%;
 font-size: 25px;
 z-index: 11;
-width: 270px;
+width: 70%;
+/* background-color: firebrick; */
 }
 .p-new{
 margin-top: -60px;
 }
 
 .close-new{
-margin-left: 30px;
-margin-top: 120px;
+margin-left: 0px;
+margin-top: 300px;
 background: none;
 opacity: 1;
 position: absolute;
@@ -1412,96 +1317,120 @@ opacity: 0.4;
 
 
 
-
-
-
-
-
                        
-                       
-                       .openLogoMenu{
-                           background-image: url(Imagelogo.png);
-                           background-repeat: no-repeat;
-                           background-size: cover;
-                           width: 100%;
-                           z-index: 9;
-                           width: 100%;
-                           height: 900px;
-                           margin-top: -170px;
-                           position: absolute;
-                           color: #FFFFFF;
-                           display: none;
-                           }
-                       
-                           .img-logo{
-                               margin-top: -180px;
-                           }
+       
+
+   
+    .openLogoMenu{
+        background-image: url(Imagelogo.png);
+        background-repeat:no-repeat;
+        background-size: cover;
+        width: 414px;
+        z-index: 9;
+        /* width: 100%; */
+        height: 1800px;
+        top: 0;                       
+        position: absolute;
+        color: #FFFFFF;
+        display: none;
+        overflow: hidden;
+        }
+        
+       
+        .reserv-new{
+            position: absolute;
+            top: 450px;
+            left: 60px;
+            width: 300px;
     
-    .new-logo{
-    position: absolute;
-    top: 0px;
-    z-index: 10;
-    }
-    .new-number{
+            /* background-color: aquamarine; */
+        }
+        .new-button-navi{
+            /* background-color: magenta; */
+            position: absolute;
+            right: 0px;
+            /* left: 300px; */
+            top: 220px;
+
+        }
+        .img-logo{
+        margin-top: -180px;
+        height: 2000px;
+        }
+        
+        .new-logo{
         position: absolute;
-        top: 0px;
-        left: 700px;
-    }
-    .coming{
+        top: 150px;
+        z-index: 10;
+        }
+        .new-number{
         position: absolute;
-        top: 200px;
-        left: 390px;
+        top: 150px;
+        width: 220px;
+        /* background-color: darkblue; */
+        left: 0px;
+        }
+        .coming{
+        position: absolute;
+        top: 480px;
+        left: 0px;
         font-size: 80px;
-    color: #FFFFFF;
-    font-family: 'Rufina';
-    }
-    
-    
-    .blockings{
-    position: absolute;
-    top: 460px;
-    left: 240px;
-    display: flex;
-    flex-wrap: wrap;
-    
-    }
-    
-    .blocking{
-    width: 100px;
-    height: 140px;
-    /* border: 1px solid ghostwhite; */
-    margin-left: 60px;
-    }
-    
-    .number-b{
-    font-size: 80px;
-    color: #FFFFFF;
-    font-family: 'Rufina';
-    margin-top: 0;
-    text-align: center;
-    
-    }
-    
-    .means{
-    text-align: center;
-    
-    font-family: 'Inter';
-    font-size: 24px;
-    font-weight: normal;
-    margin-top: -60px;
-    }
-    
-    .new-line-logo{
+        color: #FFFFFF;
+        font-family: 'Rufina';
+        text-align:  center;
+        }
+        /* .open-reserv{
+            margin-left: 0;
+        } */
+        
+        
+        .blockings{
+        position: absolute;
+        top: 800px;
+        left: 50px;
+        display: flex;
+        flex-wrap: wrap;
+        
+        }
+        
+        .blocking{
+        width: 160px;
+        height: 140px;
+        /* border: 1px solid ghostwhite; */
+        margin-left: 80px;
+        }
+        
+        .number-b{
+        font-size: 80px;
+        color: #FFFFFF;
+        font-family: 'Rufina';
+        margin-top: 0;
+        text-align: center;
+        
+        }
+        
+        .means{
+        text-align: center;
+        
+        font-family: 'Inter';
+        font-size: 24px;
+        font-weight: normal;
+        margin-top: -60px;
+        }
+        
+        .new-line-logo{
         color: #FFFFFF;
         opacity: 1.4;
-    font-weight: bold;
-    position: absolute;
-    top: 430px;
-    left: 250px;
-    }
-    
-    
-    .new-button{
+        font-weight: bold;
+        position: absolute;
+        top: 800px;
+        left: 0px;
+        width: 900px;
+        overflow: hidden;
+        }
+        
+        
+        .new-button{
         width: 200px;
         height: 60px;
         background: none;
@@ -1510,20 +1439,16 @@ opacity: 0.4;
         font-size: 30px;
         font-family: 'Inter';
         position: absolute;
-        top: 700px;
-        left: 580px;
-    }
-    
-    .new-button:hover{
+        top: 1600px;
+        left: 120px;
+        }
+        
+        .new-button:hover{
         opacity: 0.6;
         transition-duration: 0.7s;
-    }
-
-
-
-    .display{
-        display: block;
-    }
-
-
+        }
+        
+        .display{
+            display: block;
+        }
 }
