--- a/main.css
+++ b/main.css
@@ -1596,11 +1596,10 @@ a{
     
     .buttons-s6 {
         margin-top: 100px;
-        width: 99%;
-        /* margin-left: 5%; */
-        /* margin-left: 0.5%; */
-        /* border: 2px solid magenta; */
+        width: 380px;
+        margin-left: 0;
     }
+    
     
     option {
         margin-right: 30px;
