--- a/menu.css
+++ b/menu.css
@@ -651,7 +651,11 @@ opacity: 0.4;
         opacity: 0.6;
         transition-duration: 0.7s;
     }
-
+    .display{
+        display:  block;
+    }
+    
+    
 
     
 
